# trip-planner-crew

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  trip_agents.py  trip_tasks.py
tools/: calculator_tools.py
